--- a/.github/workflows/comments.yaml
+++ b/.github/workflows/comments.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Generate Token
         if: ${{ steps.action.outputs.action != '' }}
         id: generate-token
-        uses: actions/create-github-app-token@v1
+        uses: actions/create-github-app-token@d72941d797fd3113feb6b93fd0dec494b13a2547 # v1.12.0
         with:
           app-id: ${{ secrets.WORKFLOW_AUTH_PUBLIC_APP_ID }}
           private-key: ${{ secrets.WORKFLOW_AUTH_PUBLIC_PRIVATE_KEY }}
