--- a/.github/actions/cleanup-cloud/action.yaml
+++ b/.github/actions/cleanup-cloud/action.yaml
@@ -29,7 +29,7 @@ runs:
     - name: Configure AWS credentials
       if: inputs.cloud_provider == 'aws'
       id: aws-auth
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
       with:
         role-to-assume: ${{ inputs.aws_role_arn }}
         aws-region: ${{ inputs.aws_region }}
@@ -45,7 +45,7 @@ runs:
 
     - name: Azure CLI Login
       if: inputs.cloud_provider == 'azure'
-      uses: azure/login@v2
+      uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 # v2.3.0
       with:
         client-id: ${{ inputs.azure_client_id }}
         tenant-id: ${{ inputs.azure_tenant_id }}
