--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -69,14 +69,14 @@ runs:
         echo "SKIP_E2E_TEST=false" >> "$GITHUB_ENV"
 
     - name: Setup go
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
       if: ${{steps.defined.outputs.defined == 'true' }}
       with:
         go-version-file: "go.mod"
         cache: true
 
     - name: Install terraform
-      uses: hashicorp/setup-terraform@v3
+      uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
       with:
         terraform_version: ${{ inputs.tf_release }}
         terraform_wrapper: false
@@ -88,7 +88,7 @@ runs:
 
     - name: Configure AWS credentials
       id: aws-auth
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
       if: ${{ inputs.cloud_provider == 'aws' }}
       with:
         role-to-assume: ${{ inputs.aws_role_arn }}
@@ -96,7 +96,7 @@ runs:
         output-credentials: true
 
     - name: Azure CLI Login
-      uses: azure/login@v2
+      uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 # v2.3.0
       if: ${{ inputs.cloud_provider == 'azure' }}
       with:
         client-id: ${{ inputs.azure_client_id }}
