--- a/examples/full/clickpipe_kafka_confluent/aws/variables.tfvars.sample
+++ b/examples/full/clickpipe_kafka_confluent/aws/variables.tfvars.sample
@@ -9,6 +9,6 @@ region          = "us-east-1"
 kafka_brokers = ["pkc-xxxxx.us-east-1.aws.confluent.cloud:9092"]
 kafka_topics  = ["test-topic"]
 
-# Confluent Kafka credentials for SASL/SCRAM authentication
+# Confluent Kafka credentials for SASL/PLAIN authentication
 kafka_username = "your-kafka-api-key"
 kafka_password = "your-kafka-api-secret"
